--- a/README
+++ b/README
@@ -21,7 +21,7 @@ git clone git://github.com/kiang/olc_baker.git
 /olc_baker/olc_baker/config$ cp database.php.default database.php
 /olc_baker/olc_baker/config$ cp core.php.default core.php
 
-kiang@kiang-ubuntu:~/public_html/olc_baker/olc_baker/config$ mysql -uroot -p
+/olc_baker/olc_baker/config$ mysql -uroot -p
 Enter password: 
 Welcome to the MySQL monitor.  Commands end with ; or \g.
 Your MySQL connection id is 76
@@ -34,7 +34,7 @@ Query OK, 1 row affected (0.00 sec)
 
 mysql> exit
 Bye
-kiang@kiang-ubuntu:~/public_html/olc_baker/olc_baker/config$ nano database.php
+/olc_baker/olc_baker/config$ nano database.php
 
         var $default = array(
                 'driver' => 'mysql',
@@ -47,3 +47,5 @@ kiang@kiang-ubuntu:~/public_html/olc_baker/olc_baker/config$ nano database.php
                 'encoding' => 'utf8',
         );
 
+/olc_baker/olc_baker/config$ mysql -uroot -p kiang_olc_baker < sql/olc_baker.sql 
+Enter password: 
